# nextjs-fastapi-your-chat

./: .env.example  Makefile  README.md  TODO.md  package.json  pyproject.toml
api/: chain.py  index.py
