[tool.poetry]
name = "nextjs-fastapi-your-chat"
version = "0.1.0"
description = ""
authors = ["Duc Do <duc.do@persefoni.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "*"
langchain-openai = "*"
python-dotenv = "1.0.1"
uvloop = "0.19.0"
watchfiles = "0.21.0"
websockets = "12.0"
langchain-postgres = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
